Fixed header to not be padded on its sides (removing gap). Added text to  homepage.

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -2,6 +2,10 @@
 CSS app styles
 */
 
+header .columns {
+    padding: 0;
+}
+
 #example-menu {
     background-color: #333;
 }
